# GildedRose

./: .gitignore  README.md  pyproject.toml  pytest.toml
src/gildedrose/: __main__.py  gildedrose.py
test/: test_aged_brie.py  test_backstage_passes.py  test_common_items.py  test_conjured.py  test_items.py  test_normal_items.py  test_sulfuras.py
