[project]
name = "gildedrose"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "pytest-cov>=7.0.0",
]

[tool.pytest]
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
    "--cov=gildedrose.gildedrose",
    "--cov=gildedrose.goblincode",
    "--cov-report=term-missing",
]
